# mcp_marketing_collection

./: .gitignore  README.md  pyproject.toml
mcp_marketing_collection/: __init__.py  graphql_module.py  mcp_marketing_collection.py
